Show about tab by default

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <!----Dynamic Pages...These pages changes when the nav link is clicked-->
 
         <!-- ---Beginning of About Section--- -->
-        <div id="About" class="tabcontent">
+        <div id="About" class="tabcontent active">
           <h2 class="subtitle">Why Study at Benson Idahosa University</h2>
           <div class="container">
             <div class="img-aside">
